// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`builder > working with language and package manager 1`] = `
"# AI agent instructions

## General Guidelines

### Do

* Always try to early return from functions.

* Use \`const\` for variables that are not reassigned.

* Make sure to focus on why and not how in documentation.

Package Manager: npm

## Programming language (typescript)

### Do

* Use Interfaces over Types unless needed.

### Don't
"
`;

exports[`builder > working with language only 1`] = `
"# AI agent instructions

## General Guidelines

### Do

* Always try to early return from functions.

* Use \`const\` for variables that are not reassigned.

* Make sure to focus on why and not how in documentation.

## Programming language (typescript)

### Do

* Use Interfaces over Types unless needed.

### Don't
"
`;

exports[`builder > working with no arguments returns general segment only 1`] = `
"# AI agent instructions

## General Guidelines

### Do

* Always try to early return from functions.

* Use \`const\` for variables that are not reassigned.

* Make sure to focus on why and not how in documentation.
"
`;

exports[`builder > working with project type only 1`] = `
"# AI agent instructions

## General Guidelines

### Do

* Always try to early return from functions.

* Use \`const\` for variables that are not reassigned.

* Make sure to focus on why and not how in documentation.

## Project type (frontend)

### Do

* Prefer working with flex layouts for responsive design.

* Use rems for font sizes and spacing to ensure scalability.
"
`;
